<resources>
    <string name="app_name">Email Launcher</string>
    <string name="web_client_id">880903741271-mg05796npnuqu0uqhkobasjc50bosohg.apps.googleusercontent.com</string>
    <string name="getstart_bold">Set As Default Launcher</string>
    <string name="getstart_button">Set as default launcher</string>
    <string name="getstart_content">Set as default launcher for safe and convenient email service</string>
    <string name="getstart_ploicy">By starting you accept our Privacy Policy. User Agreement and Gmail API Disclosure</string>
    <string name="defaulthome_bold">Default Home App</string>
    <string name="defaulthome_email">Email Launcher</string>
    <string name="defaulthome_system">System Launcher</string>
    <string name="login_bold">Log In Your Email Account</string>
    <string name="login_comment">Manage Multiple Email Accounts in One App</string>
    <string name="login_account">Other Gmail Accounts</string>
    <string name="language_bold">Languages</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="outbox">Outbox</string>
    <string name="archive">Archive</string>
    <string name="drafts">Drafts</string>
    <string name="junk">Junk</string>
    <string name="delete">Delete</string>
    <string name="primary">Primary</string>
    <string name="star">Star</string>
    <string name="settings">Settings</string>
    <string name="otherlabel">Other Labels</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="avatar_modal_title">Select an account</string>
    <string name="compose">Compose</string>

    <string name="general_settings">General Settings</string>
    <string name="Accounts">Accounts</string>
    <string name="Others">Others</string>

    <string name="display">Display</string>
    <string name="interaction">Interaction</string>
    <string name="notifications">Notifications</string>
    <string name="network">Network</string>

    <string name="global">Global</string>
    <string name="language">Language</string>
    <string name="language_content">System default</string>
    <string name="animation">Animation</string>
    <string name="animation_content">Use gaudy visual effects</string>
    <string name="email_lists">Email Lists</string>
    <string name="show_stars">Show stars</string>
    <string name="show_stars_content">Stars indicate flagged emails</string>
    <string name="show_corres">Show correspondent names</string>
    <string name="show_corres_content">Show correspondent names rather than their email addresses</string>
    <string name="show_color_name">Colorize contacts</string>
    <string name="show_color_name_content">Colorize names in your contact list</string>
    <string name="show_contact">Show contact pictures</string>
    <string name="show_contact_content">Show contact pictures in the email list</string>
    <string name="show_color_picture">Colorize contact pictures</string>
    <string name="show_color_picture_content">Colorize missing contact pictures</string>
    <string name="change_color">Change color when read</string>
    <string name="change_color_content">A different background will show that the email has been read</string>
    <string name="threaded_view">Threaded view</string>
    <string name="threaded_view_content">Group emails by conversation</string>
    <string name="show_split">Show split-screen</string>
    <string name="show_split_content">Never</string>
    <string name="emails">Emails</string>
    <string name="fixed_width">Fixed-width fonts</string>
    <string name="fixed_width_content">Use a fixed-width font when showing plain-text emails</string>
    <string name="visible_email">Visible email actions</string>
    <string name="visible_email_content">Show selected actions in the email view menu</string>
    <string name="auto_fit">Auto-fit emails</string>
    <string name="auto_fit_content">Shrink emails to fit the screen</string>
    <string name="volume_key">Volume key navigation in email view</string>
    <string name="interaction_return">Return to list after delete</string>
    <string name="interaction_return_content">Return to email list after email deletion</string>
    <string name="interaction_next">Show next email after delete</string>
    <string name="interaction_next_content">Show next email by default after email deletion</string>
    <string name="interaction_confirm">Confirm actions</string>
    <string name="interaction_confirm_content">Show a dialog whenever you perform selected actions</string>
    <string name="noti_time">Quiet Time</string>
    <string name="noti_time_content">Disable ringing, buzzing and flashing at night</string>
    <string name="noti_dis">Disable notifications</string>
    <string name="noti_dis_content">Completely disable notifications during Quiet Time</string>
    <string name="noti_time_start">Quiet Time starts</string>
    <string name="noti_time_start_content">21:00</string>
    <string name="noti_ends">Quiet Time ends</string>
    <string name="noti_ends_content">07:00</string>
    <string name="noti_delete">Show \'Delete\' button</string>
    <string name="noti_delete_content">Always</string>
    <string name="noti_lock">Lock Screen Notifications</string>
    <string name="noti_lock_content">New email count</string>
    <string name="account_settings">Account Settings</string>

    <string name="bahasa_indonesia">Bahasa indonesia</string>
    <string name="brezhoneg">Brezhoneg</string>
    <string name="catala">Català</string>
    <string name="cestina">Cestina</string>
    <string name="cymraeg">Cymraeg</string>
    <string name="dansk">Dansk</string>
    <string name="deutsch">Deutsch</string>
    <string name="esti">Eesti</string>
    <string name="english">English</string>
    <string name="english_british">English (British)</string>
    <string name="espa">Español</string>

    <string name="confirm_actions">Confirm Actions</string>
    <string name="delete_starred">Delete Starred (in email view)</string>
    <string name="delete_from_notification">Delete (from notification)</string>
    <string name="spam">Spam</string>
    <string name="discard_email">Discard email</string>
    <string name="mark_as_read">Mark all emails as read</string>

    <string name="remove_account">Remove Account</string>
    <string name="fetching_mail">Fetching mail</string>
    <string name="sending_mail">Sending mail</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="email">swainfo.nirali@gmail.com</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Subject">Subject</string>
    <string name="Email_text">Email_text</string>
</resources>