<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:backgroundTint="@color/white"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_topcorner_rounded">
    <LinearLayout
        android:id="@+id/confirm_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/boldTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_actions"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_19"
            android:layout_marginTop="20dp"
            />
        <CheckBox
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/text_size_15"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <CheckBox
            android:id="@+id/delete_starred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_starred"
            android:textSize="@dimen/text_size_15"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"/>
        <CheckBox
            android:id="@+id/delete_from_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/delete_from_notification"
            android:textSize="@dimen/text_size_15"
            android:paddingLeft="20dp"/>
        <CheckBox
            android:id="@+id/spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spam"
            android:textSize="@dimen/text_size_15"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"/>
        <CheckBox
            android:id="@+id/discard_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard_email"
            android:textSize="@dimen/text_size_15"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"/>
        <CheckBox
            android:id="@+id/mark_as_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_read"
            android:textSize="@dimen/text_size_15"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@+id/confirm_content"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/colorPrimary"
        android:layout_marginRight="20dp"
        android:paddingBottom="15dp"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/confirm_content"
        android:layout_toLeftOf="@+id/ok"
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/colorPrimary"
        android:layout_marginRight="50dp"
        android:paddingBottom="15dp"/>
</RelativeLayout>