<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/frame"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/boldTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getstart_bold"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_below="@id/imageView"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/normalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getstart_content"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"
            android:layout_below="@id/boldTextView"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/toDefaultHome"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/getstart_button"
            android:textSize="18sp"
            android:layout_below="@id/normalTextView"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_button"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/centeredTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getstart_ploicy"
            android:textSize="12sp"
            android:layout_below="@id/toDefaultHome"
            android:gravity="center"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</RelativeLayout>