<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/gap_10sp"
            android:paddingTop="@dimen/gap_30sp"
            android:paddingBottom="@dimen/gap_20sp">

            <View
                android:id="@+id/backbutton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_back"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/gap_50sp"
                android:textSize="@dimen/text_size_18"
                android:text="@string/notifications"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:paddingHorizontal="5dp">
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_30sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_time"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="600"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_time_content"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/noti_time"
                android:layout_width="@dimen/gap_30sp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/gap_10sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_10sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_dis"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="300"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_dis_content"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/noti_dis"
                android:layout_width="@dimen/gap_30sp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/gap_10sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_10sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_time_start"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="300"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_time_start_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_10sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_ends"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="300"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_ends_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_10sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_delete"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="300"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_delete_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
        <LinearLayout
            android:background="?attr/listChoiceBackgroundIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/gap_5sp"
            android:paddingTop="@dimen/gap_10sp"
            android:paddingBottom="@dimen/gap_10sp">
            <LinearLayout
                android:background="?attr/listChoiceBackgroundIndicator"
                android:layout_weight="1"
                android:layout_width="@dimen/gap_0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_30sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:text="@string/noti_lock"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_13"
                    android:textFontWeight="300"
                    android:textColor="@color/subfont"
                    android:text="@string/noti_lock_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- Rest of your layout -->

</RelativeLayout>